--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
     "eslint-config-react-app": "^6.0.0",
+    "formik": "^2.2.6",
+    "graphql": "^15.5.0",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.6.3",
     "styled-components": "^5.2.1",
+    "styled-tools": "^1.7.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -45,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-table": "^7.0.29",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
