--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.0",
+    "@types/react-autosuggest": "^10.1.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
