--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "recruitment_task",
   "version": "0.1.0",
+  "homepage": "https://cloud11pl.github.io/simple-graphql-app/",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.11",
@@ -19,6 +20,7 @@
     "@types/styled-components": "^5.1.7",
     "eslint-config-react-app": "^6.0.0",
     "formik": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "graphql": "^15.5.0",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
@@ -41,7 +43,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
